Added resident dialog & check complaint

--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -42,3 +42,47 @@
     }
   }
 }
+
+.resident-dialog-content {
+  main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    h1 {
+      margin: 25px 0;
+      width: 55%;
+      color: #160d2e;
+      font-size: 20px;
+      font-weight: 600;
+      line-height: 1.1;
+    }
+
+    img {
+      margin: -10px -10px 0 0;
+    }
+  }
+
+  footer {
+    display: flex;
+    padding: 15px;
+
+    button {
+      border-radius: 6px;
+      background-color: var(--secondary);
+      color: white;
+      min-height: 36px;
+      padding: 12px 15px;
+      font-weight: bold;
+      font-size: 14px;
+    }
+
+    .cancel {
+      color: #878787;
+      background-color: white;
+    }
+
+    .cancel:hover {
+      background-color: rgba(158, 158, 158, 0.2);
+    }
+  }
+}
