--- a/react_webviews/src/kyc/common/Style.scss
+++ b/react_webviews/src/kyc/common/Style.scss
@@ -7,6 +7,7 @@
       width: 100%;
       padding: 13px 15px;
       font-size: 16px;
+      font-weight: 600;
 
       .loader {
         position: absolute;
@@ -18,8 +19,8 @@
     }
 
     .disabled {
-      color: rgba(0, 0, 0, 0.26);
-      background-color: rgba(0, 0, 0, 0.12);
+      background-color: #bfc1c1 !important;
+      color: rgba(0, 0, 0, 0.38) !important;
     }
   }
 }
