--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -95,3 +95,109 @@
     }
   }
 }
+
+.kyc-report {
+  padding-bottom: 40px;
+  line-height: 1.5;
+
+  main {
+    .img {
+      width: 100%;
+      margin: 20px 0 10px 0;
+    }
+
+    .congrats {
+      font-size: 14px;
+      color: #160d2e;
+      font-weight: 700;
+      text-align: center;
+    }
+
+    .text {
+      font-size: 14px;
+      color: #8d879b;
+      margin: 1px 0 10px 0px;
+      text-align: center;
+    }
+
+    .message {
+      display: flex;
+      justify-content: center;
+      margin: 0 0 20px 0;
+      column-gap: 2px;
+
+      img {
+        width: 24px;
+      }
+    }
+
+    section {
+      margin-top: 20px;
+
+      .tile-info {
+        border-top: 1px solid #f6f2ff;
+        padding: 15px 0 15px 0;
+        cursor: pointer;
+
+        .unzipped-title {
+          display: flex;
+          justify-content: space-between;
+          color: #160d2e;
+          font-size: 14px;
+        }
+
+        .unzipped {
+          margin: 20px 0 0 10px;
+          .unzipped-title {
+            color: #8d879b;
+            font-size: 16px;
+            margin: 0 0 10px 0;
+          }
+
+          .unzipped-box {
+            margin: 20px 0 0 0;
+
+            .title {
+              color: #8d879b;
+              font-size: 10px;
+              font-weight: bold;
+              margin: 0 0 3px 0;
+            }
+            .subtitle {
+              color: #8d879b;
+              font-size: 14px;
+            }
+          }
+
+          .row-align {
+            display: flex;
+            .unzipped-box {
+              width: 50%;
+            }
+          }
+        }
+      }
+
+      .tile-info:last-child {
+        border-bottom: 1px solid #f6f2ff;
+      }
+    }
+  }
+
+  footer {
+    color: #8d879b;
+    font-size: 14px;
+    text-align: center;
+    margin-top: 20px;
+
+    .partner-info {
+      margin-top: 10px;
+      display: flex;
+      justify-content: space-around;
+      color: #8d879b;
+      font-size: 10px;
+      text-transform: uppercase;
+      font-weight: 500;
+    }
+  }
+}
