--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -201,3 +201,25 @@
     }
   }
 }
+
+.aadhar {
+  line-height: 1.5;
+  header {
+    margin: -20px -20px 10px -20px;
+    padding: 20px 30px 30px 30px;
+    background: #f4f5f6;
+    text-align: center;
+    font-size: 16px;
+    color: #333333;
+    img {
+      width: 80px;
+      margin-bottom: 20px;
+    }
+  }
+
+  main {
+    .input {
+      margin-top: 20px;
+    }
+  }
+}
