--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -239,7 +239,7 @@
   }
 }
 
-.kyc-complaint-personal-details-1 {
+.kyc-complaint-personal-details {
   line-height: 1.5;
   padding-bottom: 40px;
 
@@ -257,6 +257,7 @@
       font-size: 12px;
       font-weight: 800;
       color: var(--secondary);
+      cursor: pointer;
     }
   }
 
@@ -286,5 +287,45 @@
     line-height: 21px;
     color: #8d879b;
     margin-top: 10px;
+  }
+}
+
+#kyc-pan-help-dialog {
+  line-height: 1.5;
+  .help-content {
+    border-radius: 4px;
+    .title {
+      font-size: 16px;
+      font-weight: 700;
+      color: rgba(0, 0, 0, 0.87);
+    }
+
+    .subtitle {
+      margin: 10px 0;
+      color: #4a4a4a;
+      font-size: 14px;
+    }
+
+    .partner-info {
+      margin-top: 10px;
+      display: flex;
+      justify-content: space-around;
+      color: #8d879b;
+      font-size: 10px;
+      text-transform: uppercase;
+      font-weight: 500;
+    }
+
+    button {
+      margin: 10px 0 10px 0;
+      width: 100%;
+      color: white;
+      background-color: var(--secondary);
+      min-height: 40px;
+    }
+
+    button:hover {
+      background-color: var(--secondary);
+    }
   }
 }
