--- a/react_webviews/src/kyc/common/Style.scss
+++ b/react_webviews/src/kyc/common/Style.scss
@@ -8,6 +8,7 @@
       padding: 13px 15px;
       font-size: 16px;
       font-weight: 600;
+      min-width: fit-content;
 
       .loader {
         position: absolute;
@@ -21,6 +22,16 @@
     .disabled {
       background-color: #bfc1c1 !important;
       color: rgba(0, 0, 0, 0.38) !important;
+    }
+  }
+
+  .two-button {
+    display: flex;
+    column-gap: 10px;
+
+    .first-button {
+      background-color: white;
+      color: var(--default);
     }
   }
 }
