Added registration success ui

--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -462,3 +462,19 @@
     }
   }
 }
+
+.kyc-registration-success {
+  text-align: center;
+  img {
+    width: 200px;
+  }
+
+  main {
+    p {
+      font-size: 16px;
+      margin: 0 0 10px;
+      color: #333333;
+      line-height: 1.5;
+    }
+  }
+}
