--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -18,29 +18,6 @@
     .input {
       margin: 20px 0;
     }
-
-    .status-info {
-      display: flex;
-      column-gap: 10px;
-      align-items: flex-start;
-      padding: 15px 15px 20px 15px;
-      border: 1px solid #fff5f6;
-      border-radius: 4px;
-
-      img {
-        width: 14px;
-      }
-
-      .text {
-        color: #160d2e;
-        font-size: 14px;
-
-        .title {
-          font-weight: 700;
-          margin: -2px 0 0 0;
-        }
-      }
-    }
   }
 }
 
@@ -273,11 +250,22 @@
   }
 }
 
-
 .kyc-journey {
   color: #8d879b;
   font-size: 13px;
   line-height: 1.5;
+}
+
+.kyc-pj-content .pj-header {
+  color: #0a1d32;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 0 0 20px 0;
+}
+
+.kyc-pj-bottom-info-box {
+  display: flex;
+  align-items: center;
 }
 
 .kyc-journey-caption {
@@ -291,6 +279,10 @@
   color: black;
   font-size: 17px;
   font-weight: bold;
+}
+
+.kyc-journey .alert-status-info {
+  margin-top: 20px;
 }
 
 .kyc-journey .steps-container {
@@ -340,7 +332,8 @@
 .kyc-journey .steps-container .step .title__selected {
   color: black;
   font-weight: 500;
-} 
+}
+
 #kyc-pan-help-dialog {
   line-height: 1.5;
   .help-content {
@@ -751,5 +744,126 @@
 
   .block:last-child {
     border-bottom: 0;
+  }
+}
+
+.kyc-show-aadhar {
+  line-height: 1.5;
+}
+
+.kyc-show-aadhar .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.kyc-show-aadhar .description {
+  color: #767e86;
+  font-size: 14px;
+}
+
+.kyc-show-aadhar .content {
+  display: flex;
+  align-items: center;
+}
+
+.kyc-show-aadhar .content .info-box {
+  display: flex;
+  justify-content: space-between;
+  flex: 1 0 40%;
+}
+
+.kyc-show-aadhar .content .info-box .title {
+  margin-left: 10px;
+  color: #767e86;
+  width: 100%;
+  font-size: 13px;
+  white-space: nowrap;
+}
+
+.kyc-show-aadhar .action-btn {
+  background-color: var(--secondary);
+  margin-top: 10px;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 5px 15px;
+  font-weight: bold;
+  min-width: 140px;
+  display: block;
+
+  .MuiButton-label {
+    text-transform: uppercase;
+    color: white;
+  }
+}
+
+.kyc-journey .kyc-pj-content {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  img {
+    align-self: flex-start;
+  }
+}
+
+.kyc-journey .kyc-pj-content .pj-bottom-info-box {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+
+  .icon {
+    align-self: center;
+  }
+}
+
+.kyc-journey .kyc-pj-content .pj-bottom-info-box .pj-bottom-info-content {
+  margin-left: 10px;
+}
+
+.kyc-alert {
+  padding: 15px 15px 20px 15px;
+  border-radius: 4px;
+  display: flex;
+  align-items: flex-start;
+  font-size: 14px;
+}
+
+.kyc-alert__danger {
+  background-color: #fff5f6;
+  border: 1px solid #fff5f6;
+}
+
+.kyc-alert .header {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.kyc-alert .header .icon {
+  width: 14px;
+}
+
+
+.alert-status-info {
+  display: flex;
+  column-gap: 10px;
+  align-items: flex-start;
+  padding: 15px 15px 20px 15px;
+  border: 1px solid #fff5f6;
+  border-radius: 4px;
+
+  img {
+    width: 14px;
+  }
+
+  .text {
+    color: #160d2e;
+    font-size: 14px;
+
+    .title {
+      font-weight: 700;
+      margin: -2px 0 0 0;
+    }
   }
 }
