--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -334,6 +334,8 @@
   font-weight: 500;
 }
 
+///////////// PAN HELP START //////////////
+
 #kyc-pan-help-dialog {
   line-height: 1.5;
   .help-content {
@@ -373,6 +375,10 @@
     }
   }
 }
+
+///////////// PAN HELP START //////////////
+
+///////////// CONFIRM PAN  START //////////////
 
 .FooterDefaultLayout {
   .two-button {
@@ -421,6 +427,10 @@
     }
   }
 }
+
+///////////// CONFIRM PAN  END //////////////
+
+///////////// KYC COMPLIANT COMPLETE  START //////////////
 
 .kyc-compliant-complete {
   line-height: 1.5;
@@ -472,6 +482,8 @@
     }
   }
 }
+
+///////////// KYC COMPLIANT COMPLETE  START //////////////
 
 .contact-us {
   color: #8d879b;
@@ -581,6 +593,8 @@
   }
 }
 
+///////////// BANK VERIFY END //////////////
+
 .kyc-approved-bank-verify {
   line-height: 1.5;
   padding-bottom: 30px;
@@ -656,6 +670,10 @@
     }
   }
 }
+
+///////////// BANK VERIFY END //////////////
+
+///////////// BANK LIST START //////////////
 
 .banks-list {
   line-height: 1.5;
@@ -746,6 +764,8 @@
     border-bottom: 0;
   }
 }
+
+///////////// BANK LIST END //////////////
 
 .kyc-show-aadhar {
   line-height: 1.5;
@@ -844,7 +864,6 @@
   width: 14px;
 }
 
-
 .alert-status-info {
   display: flex;
   column-gap: 10px;
@@ -867,3 +886,129 @@
     }
   }
 }
+
+///////////// BANK DETAILS START //////////////
+
+.bank-details {
+  .bank-info {
+    display: flex;
+    padding: 30px 0;
+
+    .left-icon {
+      width: 40px;
+      vertical-align: middle;
+    }
+
+    .content {
+      margin-left: 20px;
+      margin-right: 10px;
+
+      .bank-name {
+        display: flex;
+
+        .name {
+          font-size: 15px;
+          line-height: 18px;
+          font-weight: bold;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          min-width: 150px;
+          max-width: 180px;
+        }
+
+        .alert-icon {
+          width: 15px;
+          margin-left: 5px;
+        }
+
+        .tag {
+          background: #e0ffbf;
+          padding: 7px 10px 5px 10px;
+          border-radius: 8px;
+          font-size: 10px;
+          line-height: 12px;
+          text-align: center;
+          letter-spacing: 1px;
+          color: #7ed321;
+          vertical-align: middle;
+          box-sizing: border-box;
+          cursor: pointer;
+        }
+      }
+
+      .branch-name {
+        margin-top: 10px;
+        font-size: 13px;
+        color: #767e86;
+      }
+    }
+  }
+
+  .item {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -ms-flex-align: center;
+    align-items: center;
+    font-size: 13px;
+    margin-bottom: 24px;
+
+    .left {
+      font-weight: 500;
+      color: #0a1d32;
+    }
+
+    .right {
+      color: #160d2e;
+    }
+
+    .status {
+      font-size: 11px;
+      color: #160d2e;
+    }
+
+    .verified {
+      color: #35cb5d;
+    }
+
+    .failed {
+      color: #d0021b;
+    }
+
+    .underprocess {
+      color: #ffd01f;
+    }
+  }
+
+  .mandate-section {
+    padding: 20px 0;
+    border-top: 1px solid #eee;
+
+    .title {
+      font-weight: 500;
+      font-size: 15px;
+      line-height: 18px;
+      color: #000000;
+    }
+
+    .info-text {
+      padding-top: 10px;
+      font-size: 13px;
+      line-height: 21px;
+      color: #767e86;
+    }
+
+    .content {
+      padding: 20px 0;
+      border-bottom: 1px solid #eee;
+    }
+
+    .content:last-child {
+      border-bottom: none;
+    }
+  }
+}
+
+///////////// BANK DETAILS END //////////////
