--- a/react_webviews/src/dashboard/nps/style.scss
+++ b/react_webviews/src/dashboard/nps/style.scss
@@ -335,7 +335,9 @@
   background-color: #faf7ff;
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 16px;
+  margin: -20px -20px 20px;
+  padding: 5px 0;
 
   .text {
     padding: 15px;
