--- a/react_webviews/src/dashboard/nps/style.scss
+++ b/react_webviews/src/dashboard/nps/style.scss
@@ -359,3 +359,16 @@
     margin-top: 20px;
   }
 }
+
+.nps-upload {
+  margin-top: 40px;
+  .MuiInputLabel-root {
+    color: #000 !important;
+    font-size: 1.1rem !important;
+    font-weight: 800 !important;
+  }
+
+  .MuiMenu-paper {
+    width: 600px !important;
+  }
+}
