--- a/react_webviews/src/internal_wealth_dashboard/mini-components/Style.scss
+++ b/react_webviews/src/internal_wealth_dashboard/mini-components/Style.scss
@@ -6,7 +6,7 @@ $light-green: rgb(154, 211, 204); //9AD3CC
 $dark-green: rgb(57, 183, 168); //39B7A8
 $card-padding-mob: 40px;
 $card-padding: 50px;
-@import '../animate.scss';
+@import "../animate.scss";
 
 .iwd-cursor__pointer {
   cursor: pointer;
@@ -66,7 +66,7 @@ $card-padding: 50px;
 }
 
 #iwd-help {
-  font-family: 'Poppins', 'Roboto', sans-serif !important;
+  font-family: "Poppins", "Roboto", sans-serif !important;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -165,7 +165,8 @@ $card-padding: 50px;
       }
     }
 
-    div > picture:nth-of-type(1), div > picture:nth-of-type(2) {
+    div > picture:nth-of-type(1),
+    div > picture:nth-of-type(2) {
       img {
         width: 20px;
       }
@@ -174,7 +175,7 @@ $card-padding: 50px;
 }
 
 #iwd-fgt-pwd {
-  font-family: 'Poppins', 'Roboto', sans-serif !important;
+  font-family: "Poppins", "Roboto", sans-serif !important;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -242,7 +243,7 @@ $card-padding: 50px;
     }
 
     .iwd-fp-btn-text {
-      font-family: 'Poppins', 'Roboto', sans-serif !important;
+      font-family: "Poppins", "Roboto", sans-serif !important;
       font-weight: bold;
       font-size: 15px;
       line-height: 24px;
@@ -599,9 +600,6 @@ ul#iwd-bars {
 }
 
 #iwd-profile {
-  padding: 30px 40px 20px;
-  width: 340px;
-  height: auto;
   border-radius: 10px;
   box-shadow: 0px 4px 6px 1px rgba(black, 0.05);
   box-sizing: border-box;
@@ -694,7 +692,7 @@ ul#iwd-bars {
     }
 
     .iwd-ggli-label {
-      font-weight: 600; 
+      font-weight: 600;
     }
 
     span {
@@ -707,7 +705,7 @@ ul#iwd-bars {
   }
 
   .iwd-ggl-item:nth-child(1) {
-    border-right: 1px solid #C4C4C4;
+    border-right: 1px solid #c4c4c4;
     padding-right: 20px;
     margin-right: 20px;
   }
@@ -723,7 +721,7 @@ ul#iwd-bars {
   height: 79%;
   width: 48%;
   flex: 0 1 48%;
-  background: white url('../../assets/bg_waves_fund.svg') bottom no-repeat;
+  background: white url("../../assets/bg_waves_fund.svg") bottom no-repeat;
   background-size: contain;
   margin-bottom: 40px;
   scroll-snap-align: start;
@@ -1031,7 +1029,7 @@ table.iwd-transactions-table {
   .shrink {
     clip-path: circle(0% at bottom);
   }
-  
+
   .iwd-common-page-footer {
     margin-top: 30px;
     img:nth-of-type(2) {
@@ -1337,7 +1335,6 @@ table.iwd-transactions-table {
 }
 
 @media only screen and (max-width: 450px) {
-
   // Holding Transaction page
   .iwd-transactions-table {
     width: 800px !important;
@@ -1360,7 +1357,7 @@ table.iwd-transactions-table {
     background: white;
     margin: 0 !important;
     transition: clip-path 0.8s ease-in-out 0.1s;
-    font-family: 'Poppins', 'Roboto', sans-serif;
+    font-family: "Poppins", "Roboto", sans-serif;
 
     .iwd-filter-mobile-container {
       position: relative;
@@ -1376,7 +1373,7 @@ table.iwd-transactions-table {
 
       //changes done
       position: fixed;
-      left:0;
+      left: 0;
       bottom: 10px;
 
       margin: 30px auto 20px auto;
@@ -1538,7 +1535,8 @@ table.iwd-transactions-table {
 .rs-picker-toggle-caret {
   color: $primary !important;
 }
-.rs-picker-toggle-caret, .rs-picker-toggle-clean {
+.rs-picker-toggle-caret,
+.rs-picker-toggle-clean {
   top: 14px !important;
 }
 .rs-calendar-table-cell-content {
