--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -960,3 +960,30 @@
 }
 
 ///////////// BANK DETAILS END //////////////
+
+#kyc-upload-intro {
+  .banner {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0 10px 0;
+    img {
+      display: block;
+      margin: 0 auto;
+    }
+  }
+
+  .intro {
+    margin: 0 auto;
+    text-align: center;
+    font-size: 14px;
+    color: #160d2e;
+  }
+
+  .trust {
+    margin-top: 90px;
+    img {
+      display: block;
+      margin: 0 auto;
+    }
+  }
+}
