--- a/react_webviews/src/dashboard/nps/style.scss
+++ b/react_webviews/src/dashboard/nps/style.scss
@@ -109,15 +109,14 @@
   }
 
   .help-text {
-    font-family: "LatoM";
+    // font-family: "LatoM";
     font-size: 14px;
     margin-top: 10px;
     margin-bottom: 15px;
     color: #4a4a4a;
 
-    span {
-      font-family: "Lato";
-    }
+    // span {
+    // }
   }
 
   .tags {
@@ -142,6 +141,12 @@
         cursor: pointer;
       }
     }
+  }
+}
+
+.nps-identity {
+  .MuiFormGroup-root {
+    flex-direction: row !important;
   }
 }
 
@@ -271,7 +276,7 @@
 
   .heading {
     margin-bottom: 20px;
-    font-family: "LatoB";
+    // font-family: "LatoB";
 
     .flex-box {
       color: #4a4a4a;
@@ -302,11 +307,11 @@
   .heading {
     color: #878787;
     margin-bottom: 10px;
-    font-family: "LatoB";
+    // font-family: "LatoB";
   }
 
   span {
-    font-family: "LatoB";
+    // font-family: "LatoB";
   }
 
   .more {
@@ -370,5 +375,301 @@
 
   .MuiMenu-paper {
     width: 600px !important;
+  }
+}
+
+.payment-sucess {
+  text-align: center;
+  margin-top: 50px;
+  position: relative;
+  padding-top: 1px;
+  background: #fff;
+  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  margin: 10px;
+  margin-top: 20px;
+
+  .icon {
+    margin: 40px 0;
+  }
+
+  .grey_text {
+    font-size: 16px;
+    margin-top: 20px;
+    color: #878787;
+    margin-bottom: 30px;
+    padding-bottom: 15px;
+
+    span {
+      // font-family: "LatoB";
+    }
+  }
+
+  h3 {
+    color: #4a4a4a;
+    font-size: 22px;
+    // font-family: "LatoB";
+    margin: 0;
+  }
+
+  p {
+    color: #4a4a4a;
+    font-size: 18px;
+  }
+
+  .contact {
+    background: #f9f9f9;
+    padding: 10px;
+
+    p {
+      color: #a6a6a6;
+    }
+
+    .flex-box {
+      display: flex;
+      align-items: center;
+      margin: 10px 0;
+
+      .item {
+        flex: 1;
+        color: #a6a6a6;
+        // font-family: "LatoB";
+        font-size: 16px;
+      }
+
+      .item:first-child {
+        border-right: 1px solid #a6a6a6;
+      }
+    }
+  }
+}
+
+.mainbottom {
+  margin-bottom: 20px;
+
+  .list {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+
+    .icon {
+      position: relative;
+      margin-right: 20px;
+    }
+
+    .text {
+      position: relative;
+
+      h4 {
+        margin: 0;
+        font-size: 16px;
+      }
+
+      p {
+        margin: 0;
+        font-size: 14px;
+        line-height: normal;
+        min-height: 32px;
+      }
+    }
+    .status {
+      position: absolute;
+      top: 14px;
+      right: 10px;
+      font-size: 10px;
+      letter-spacing: 2px;
+      font-weight: 700;
+      display: flex;
+      align-items: center;
+
+      .circle {
+        width: 8px;
+        height: 8px;
+        border-radius: 100px;
+        margin-right: 5px;
+        margin-bottom: 2px;
+      }
+    }
+    .green {
+      color: #71bf1c;
+      .circle {
+        background: #71bf1c;
+      }
+    }
+    .yellow {
+      color: #c2a20c;
+      .circle {
+        background: #c2a20c;
+      }
+    }
+  }
+
+  .list:last-child {
+    border-bottom: 0;
+    margin-bottom: 0;
+  }
+}
+
+.pending {
+  .fund {
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 3px;
+  }
+
+  .list-item {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    margin-bottom: 15px;
+
+    .icon {
+      max-width: 50px;
+      flex: 1;
+      border: 1px solid #f0f0f0;
+      border-radius: 2px;
+    }
+
+    .text {
+      flex: 6;
+
+      h1 {
+        width: 80%;
+        margin: 0;
+        font-size: 16px;
+        line-height: 20px;
+        // font-family: 'LatoB';
+        color: #4a4a4a;
+        margin-bottom: 5px;
+      }
+
+      .tier {
+        font-size: 12px;
+        line-height: 16px;
+        font-weight: bold;
+        color: #4a4a4a;
+      }
+    }
+  }
+
+  .npsscheme {
+    margin-bottom: 10px;
+    .category {
+      margin-bottom: 5px;
+    }
+    .stock {
+      color: #c75b5b;
+    }
+
+    .equity {
+      color: #4a90e2;
+    }
+
+    .corporate {
+      color: #6b47c9;
+    }
+
+    .gov {
+      color: #2ec5a3;
+    }
+  }
+
+  .display-flex {
+    justify-content: space-between;
+    font-size: 12px;
+    // font-family: 'LatoM';
+    color: #878787;
+
+    h3 {
+      font-size: 12px;
+      // font-family: 'LatoM';
+      color: #878787;
+      margin: 0;
+      margin-bottom: 5px;
+    }
+  }
+
+  .divider {
+    margin: 20px 0;
+    border-bottom: 2px dashed #d5d5d5;
+  }
+  .tnc {
+    font-size: 12px;
+    color: #878787;
+    text-align: center;
+  }
+}
+
+.nps-mandate {
+  background: #fff;
+  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  margin-top: 20px;
+  padding-bottom: 15px;
+  position: relative;
+
+  img {
+    position: relative;
+    left: 0;
+    margin-bottom: 10px;
+  }
+
+  h3 {
+    color: #4a4a4a;
+    font-size: 18px;
+    // font-family: "LatoB";
+    margin: 0;
+  }
+
+  .info {
+    padding: 2px 10px;
+    border-radius: 100px;
+    text-transform: uppercase;
+    margin-left: 10px;
+    font-size: 12px;
+    // font-family: "LatoM";
+  }
+
+  p {
+    color: #878787;
+    font-size: 16px;
+  }
+
+  .flex-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0;
+
+    .item {
+      flex: 1;
+      text-align: center;
+      color: #a6a6a6;
+      // font-family: "LatoB";
+      font-size: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        margin: 0;
+        margin-right: 10px;
+      }
+
+      span {
+        color: #878787;
+      }
+    }
+
+    .item:first-child {
+      border-right: 1px solid #a6a6a6;
+    }
   }
 }
