added generic api service for kyc journey

--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -987,3 +987,16 @@
     }
   }
 }
+
+.kyc-upload-card {
+  border: 1px solid beige;
+  padding: 10px 0 10px 0;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+
+  .title {
+    margin-left: 10px;
+  }
+}
