--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1345,7 +1345,8 @@ input#pan {
   font-size: 10px;
   text-align: center;
   width: 100%;
-  color: #0A1D32;
+  // color: #0A1D32;
+  color: #C4C4C4;
   font-weight: 400;
 
 
