--- a/react_webviews/src/internal_wealth_dashboard/animate.scss
+++ b/react_webviews/src/internal_wealth_dashboard/animate.scss
@@ -29,7 +29,7 @@
   .iwd-profile-content {
     opacity: 0;
     padding: 30px 40px 20px;
-    @include iwd-fadeCreator(0.3, ease-in, 0.4);
+    @include iwd-fadeCreator(0.2, ease-in-out, 0.4);
   }
 }
 .boxEffect-enter-done {
@@ -50,12 +50,12 @@
 .boxEffect-exit-active {
   .iwd-profile-content {
     opacity: 0;
-    transition: opacity ease-in 0.3s;
+    transition: opacity ease-in 0.2s;
   }
   width: 0;
   height: 0;
   transition: width 500ms, height 441ms ease-out;
-  transition-delay: 500ms;
+  transition-delay: 0.2s;
 }
 
 .circularExpand {
