--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -136,6 +136,10 @@
     section {
       margin-top: 20px;
 
+      .compliant-report-skelton {
+        height: 100px !important;
+      }
+
       .tile-info {
         border-top: 1px solid #f6f2ff;
         padding: 15px 0 15px 0;
