Added api integration for report

--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -140,6 +140,10 @@
         height: 100px !important;
       }
 
+      .report-skelton {
+        height: 200px !important;
+      }
+
       .tile-info {
         border-top: 1px solid #f6f2ff;
         padding: 15px 0 15px 0;
