--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1345,6 +1345,7 @@ input#pan {
   display: flex;
   flex-direction: row;
   overflow: scroll ;
+  padding-top: 100px;
   padding-bottom: 5px;
   overflow-x: hidden;
   height: 100%;
@@ -1384,6 +1385,7 @@ input#pan {
   .childblockiframe {
     flex-direction: column-reverse;
     height: auto;
+    padding-top: 0;
   }
   .childblockiframe-element-one{
     width: 90%;
