--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1385,7 +1385,7 @@ input#pan {
   .childblockiframe {
     flex-direction: column-reverse;
     height: auto;
-    padding-top: 0;
+    padding-top: 52px;
   }
   .childblockiframe-element-one{
     width: 90%;
@@ -1401,4 +1401,16 @@ input#pan {
     top: 0;
   }
 
+}
+
+.Loaderiframe {
+  background: #fff;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 200;
 }
